Add dev env scripts

--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "scripts": {
     "deploy": "gatsby build && gh-pages -b master -d public",
     "build": "gatsby build",
+    "dev": "yarn develop",
     "develop": "gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
+    "serve": "gatsby serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
